# cotdata

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_TODO.md  README.md  pyproject.toml  requirements.txt  test_adjustment.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-test.yml
docs/: plan_promote_reconstructed_volume.md  spec_disaggregated_ingest.md
reference/: Norgate_Futures_Data_Download.ipynb
scripts/: reconcile_volume.py  validate_databento_vs_norgate.py
src/cotdata/: __init__.py  config.py  cot.py  prices.py  registry.py  registry.yaml  status.py  store.py  update.py
src/cotdata/providers/: __init__.py  base.py  cftc.py  cftc_disagg.py  cftc_tff.py  databento.py  norgate.py  yfinance.py
tests/: test_adjustment.py  test_cftc_disagg_fidelity.py  test_cftc_reconciliation.py  test_cftc_tff_reconciliation.py  test_cli_exit.py  test_cot.py  test_databento_build.py  test_databento_ingest.py  test_databento_provider.py  test_norgate_provider.py  test_propadj.py  test_registry.py  test_status.py  test_store.py  test_validate_databento.py  test_yfinance_provider.py
