[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cotdata"
version = "0.1.0"
description = "Canonical data layer for COT/futures strategies — a producer/consumer split over a file-based store."
readme = "README.md"
authors = [
    {name = "Matt S.", email = "cotanalyzer@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "pyarrow>=10",
    "requests>=2.28",       # CFTC COT zips
    "python-dateutil>=2.8",
    "packaging",            # required by norgatedata
    "xlrd>=2.0",            # CFTC dea_fut_xls are legacy .xls
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/mspinola/cotdata"
Repository = "https://github.com/mspinola/cotdata"
Issues = "https://github.com/mspinola/cotdata/issues"

[project.optional-dependencies]
# Producer-only, Windows: the Norgate Data Updater must be installed & running.
norgate = ["norgatedata"]
# Dormant provider, retained for the intraday news-failure work + settlement cross-check.
databento = ["databento>=0.30"]

yahoo = ["yfinance"]
dev = ["pytest>=7", "ruff==0.15.22"]

[project.scripts]
cotdata-update = "cotdata.update:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cotdata = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
